--- a/test.html
+++ b/test.html
@@ -204,7 +204,7 @@ AFRAME.registerComponent('run', {
 
   <a-marker type="pattern" 
 url="https://raw.githubusercontent.com/AR-js-org/AR.js/master/data/multimarkers/multi-abcdef/patt.a" id="A" registerevents> 
-  <a-plane src="#photo1" rotation="-90 0 0" id="drawA"></a-plane>
+  <a-plane src="https://github.com/Lefoxi/ARdip/blob/main/photo1.jpg" rotation="-90 0 0" id="drawA"></a-plane>
   <!--<a-plane src="https://live.staticflickr.com/3097/2295905317_585b606a01_b.jpg" position="1 0 0" rotation="-90 0 0" id="drawX" visible="false"></a-plane>-->
   <!--<a-video src="#video" autoplay loop="true" position="1 0 0" rotation="-90 0 0" id="drawX" visible="false">-->
 <a-entity material="shader: flat; src: #video-a" geometry="primitive: plane; width: 1.60; height: 0.90;" position="-0.5 0 -1.5" 
