--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <a href="test.html" target="_blank">Якісні реакції галогенід-йонів</a>
+    <a href="test.html" target="_blank">Відкрити тестовий файл</a>
      
   </body>
 </html>
