--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <body>
     <a href="test.html" target="_blank">Відкрити тестовий файл</a>
+    <a href="png" target="_blank">Відкрити теку із маркерами</a>
      
   </body>
 </html>
