--- a/test.html
+++ b/test.html
@@ -153,7 +153,7 @@ AFRAME.registerComponent('run', {
   </a-assets>
 
   <a-marker type="pattern" 
-url="https://raw.githubusercontent.com/AR-js-org/AR.js/master/data/multimarkers/multi-abcdef/patt.a" id="M0" registerevents> 
+url="pattern-1.patt" id="M0" registerevents> 
   <a-plane src="https://live.staticflickr.com/65535/51731456204_7110873bd3_z_d.jpg" rotation="-90 0 0" id="draw0"></a-plane>
   <!--<a-plane src="https://live.staticflickr.com/3097/2295905317_585b606a01_b.jpg" position="1 0 0" rotation="-90 0 0" id="drawX" visible="false"></a-plane>-->
   <!--<a-video src="#video" autoplay loop="true" position="1 0 0" rotation="-90 0 0" id="drawX" visible="false">-->
@@ -166,7 +166,7 @@ url="https://raw.githubusercontent.com/AR-js-org/AR.js/master/data/multimarkers/
   </a-marker> 
 
   <a-marker type="pattern" 
-url="https://raw.githubusercontent.com/AR-js-org/AR.js/master/data/multimarkers/multi-abcdef/patt.b" id="M1" registerevents> 
+url="pattern-2.patt" id="M1" registerevents> 
   <a-plane src="https://live.staticflickr.com/65535/51731053663_c43d0f7522_z_d.jpg" rotation="-90 0 0" id="draw1"></a-plane>
 <a-entity material="shader: flat; src: #video01" geometry="primitive: plane; width: 0.90; height: 1.60;" position="0 0 0" 
 				rotation="-90 0 0" id="drawX10" visible="false"></a-entity>	  
@@ -178,7 +178,7 @@ url="https://raw.githubusercontent.com/AR-js-org/AR.js/master/data/multimarkers/
   </a-marker> 
 
   <a-marker type="pattern" 
-url="https://raw.githubusercontent.com/AR-js-org/AR.js/master/data/multimarkers/multi-abcdef/patt.c" id="M2" registerevents> 
+url="pattern-3.patt" id="M2" registerevents> 
   <a-plane src="https://live.staticflickr.com/3156/2468030559_55f941b658_b.jpg" rotation="-90 0 0" id="draw1"></a-plane>
 <a-entity material="shader: flat; src: #video02" geometry="primitive: plane; width: 0.90; height: 1.60;" position="0 0 0" 
 				rotation="-90 0 0" id="drawX20" visible="false"></a-entity>	  
@@ -190,7 +190,7 @@ url="https://raw.githubusercontent.com/AR-js-org/AR.js/master/data/multimarkers/
   </a-marker> 
 
   <a-marker type="pattern" 
-url="https://raw.githubusercontent.com/AR-js-org/AR.js/master/data/multimarkers/multi-abcdef/patt.d" id="M3" registerevents> 
+url="pattern-4.patt" id="M3" registerevents> 
   <a-plane src="https://live.staticflickr.com/2800/4427325165_18c24af70d_b.jpg" rotation="-90 0 0" id="draw1"></a-plane>
 <a-entity material="shader: flat; src: #video03" geometry="primitive: plane; width: 0.90; height: 1.60;" position="0 0 0" 
 				rotation="-90 0 0" id="drawX30" visible="false"></a-entity>	  
