--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <a href="test.html" target="_blank">Відкрити тестовий файл</a>
+    <a href="test.html" target="_blank">Відкрити тестовий файл</a><p>
     <a href="pattern-1.png" target="_blank">Відкрити маркер 1</a>
      
   </body>
