--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <body>
     <a href="test.html" target="_blank">Відкрити тестовий файл</a><p>
-    <a href="pattern-1.png" target="_blank">Відкрити маркер 1</a>
+    <a href="Набір маркерів.pdf" target="_blank">Відкрити набір маркерів</a>
      
   </body>
 </html>
