--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <html>
-  <body>
-    <a href="test.html" target="_blank">Відкрити тестовий файл</a><p>
-    <a href="Набір маркерів.pdf" target="_blank">Відкрити набір маркерів</a>
-     
-  </body>
+	<head>
+		<style>
+			button {color: lightgreen; background: #0000aa; height: 150px; width: 450px; font-size:200%; 
+				border: 2px solid powderblue; padding: 30px;  
+				position: fixed; padding: 1vh; bottom: 1vh; left: 50%; transform: translate(-50%, -50%); top: 50%; 
+				}
+			#markers {font-size:150%; 
+				border: 2px solid powderblue; padding: 30px;  
+				position: fixed; bottom: 1vh; left: 50%; transform: translateX(-50%);
+				}
+		</style>
+	</head>
+	<body>
+		<a href="ar.html" target="_blank"><button>Перейти до віртуальної лабораторії</button></a><p>
+		<a href="markers.pdf" target="_blank" id="markers">Відкрити набір маркерів</a>
+	</body>
 </html>
