--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <html>
 	<head>
 		<style>
-			button {color: lightgreen; background: #0000aa; height: 150px; width: 450px; font-size:200%; 
+			button {
+				color: lightgreen; background: #0000aa; height: 150px; width: 450px; font-size:200%; 
 				border: 2px solid powderblue; padding: 30px;  
 				position: fixed; padding: 1vh; bottom: 1vh; left: 50%; transform: translate(-50%, -50%); top: 50%; 
 				}
-			#markers {font-size:150%; 
+			#markers {
+				font-size:150%; 
 				border: 2px solid powderblue; padding: 30px;  
 				position: fixed; bottom: 1vh; left: 50%; transform: translateX(-50%);
 				}
