--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <html>
 	<head>
 		<style>
-			button {
-				color: lightgreen; background: #0000aa; height: 150px; width: 450px; font-size:200%; 
+			button {color: lightgreen; background: #0000aa; height: 150px; width: 450px; font-size:200%; 
 				border: 2px solid powderblue; padding: 30px;  
 				position: fixed; padding: 1vh; bottom: 1vh; left: 50%; transform: translate(-50%, -50%); top: 50%; 
 				}
-			#markers {
-				font-size:150%; 
+			#markers {font-size:138%; 
 				border: 2px solid powderblue; padding: 30px;  
 				position: fixed; bottom: 1vh; left: 50%; transform: translateX(-50%);
 				}
@@ -15,6 +13,8 @@
 	</head>
 	<body>
 		<a href="ar.html" target="_blank"><button>Перейти до віртуальної лабораторії</button></a><p>
-		<a href="markers.pdf" target="_blank" id="markers">Відкрити набір маркерів</a>
+		<a href="markers.pdf" target="_blank" id="markers">Натисність для завантаження набору маркерів - 
+			роздрукуйте та розріжте їх. У віртуальній лабораторії покажіть їх камері, й, після появи
+			на маркері зображення, спробуйте їх зблизити, але без накладання.</a>
 	</body>
 </html>
